[package]
name = "tea"
version = "0.1.0"
edition = "2021"
# Requires Rust ≥ 1.79  (eframe 0.29+)

[dependencies]
egui = "0.27"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

toml = "0.8"
anyhow = "1"

eframe = { version = "0.27", features = ["serde", "glow"] } 
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"



[profile.release]
opt-level = 3
# Strip debug symbols for a smaller binary
strip = true